<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.openchrom</groupId>
  <artifactId>parent</artifactId>
  <version>BUILD-VERSION</version>
  <packaging>pom</packaging>
  <!--
	USE MAVEN 3.0
  --> 
  <prerequisites>
    <maven>3.0</maven>
  </prerequisites>
  <!--
	PROPERTIES
  --> 
  <properties>
    <tycho-version>0.13.0</tycho-version>
    <tycho-groupid>org.sonatype.tycho</tycho-groupid>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <!--
	DESCRIPTION
  --> 
  <name>OpenChrom PDF Converter</name>
  <description>
	The OpenChrom PDF converter writes chromatogram files to PDF format. It extends the functionality of the OpenChrom Rich Client Platform (RCP).
  </description>
  <url>file:///media/3A132BBA0C9C1015/GIT-REPOSITORIES/www.openchrom.de/pdfconverter</url>
  <!--
	LICENSES
  -->
  <licenses>
    <license>
      <name>Proprietary: Copyright by Philip (eselmeister) Wenig</name>
    </license> 
  </licenses>
  <!--
	DEVELOPERS
  -->
  <developers>
    <developer>
      <id>eselmeister</id>
      <name>Philip Wenig</name>
      <email>philip.wenig [at] gmx.net</email>
      <timezone>+1</timezone>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>
  <!--
	MODULES
  -->
  <modules>
    <module>./plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf</module>
    <module>./plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.fragment.i18n</module>
    <!--<module>./plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.fragment.test</module>-->
    <module>./plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui</module>
    <module>./plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.fragment.i18n</module>
    <!--<module>./plugins/net.openchrom.chromatogram.msd.converter.supplier.pdf.ui.fragment.test</module>-->
    <module>./features/net.openchrom.chromatogram.msd.converter.supplier.pdf.feature</module>
    <!--<module>./updateSites/net.openchrom.chromatogram.msd.converter.supplier.pdf.updateSite</module>-->
  </modules>
  <!--
	DEPENDENCIES SHOULD BE EDITED IN EACH MODULE.
  -->
  <!--
	P2 REPOSITORIES
  -->
  <repositories>
   <repository>
     <id>forge</id>
     <url>http://repository.sonatype.org/content/groups/public</url>
     <snapshots>
       <enabled>true</enabled>
     </snapshots>
     <releases>
       <enabled>true</enabled>
     </releases>
   </repository>
   <!-- Use update35 to avoid problems determining the SWT bundle version. -->
   <repository>
     <id>update35</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/eclipse/updates/3.5</url>
   </repository>
<!--
   <repository>
     <id>indigo</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/indigo</url>
   </repository>
-->
   <repository>
     <id>helios</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/helios</url>
   </repository>
   <repository>
     <id>galileo</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/galileo</url>
   </repository>
   <repository>
     <id>ganymede</id>
     <layout>p2</layout>
     <url>http://download.eclipse.org/releases/ganymede</url>
   </repository>
  </repositories>
  <!--
	PLUGIN REPOSITORIES
  -->
  <pluginRepositories>
    <pluginRepository>
      <id>forge</id>
      <url>http://repository.sonatype.org/content/groups/public</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
    <pluginRepository>
      <id>forge1</id>
      <url>http://repository.sonatype.org/content/repositories/all-001</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </pluginRepository>
  </pluginRepositories>
  <!--
	SOURCE CODE MANAGEMENT
  -->
  <scm>
    <connection>scm:git:file:///media/3A132BBA0C9C1015/GIT-REPOSITORIES/www.openchrom.de/pdfconverter</connection>
    <developerConnection>scm:git:file:///media/3A132BBA0C9C1015/GIT-REPOSITORIES/www.openchrom.de/pdfconverter</developerConnection>
    <url>file:///media/3A132BBA0C9C1015/GIT-REPOSITORIES/www.openchrom.de/pdfconverter</url>
  </scm>
  <!--
	BUILD
  -->
  <build>
    <!--
	PLUGINS
    -->  
    <plugins>
      <!--
	Use the maven source code management plugin.
      -->
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-scm-plugin</artifactId>
	<version>1.2</version>
	  <configuration>
	    <checkoutDirectory>.</checkoutDirectory>
	  </configuration>
      </plugin>
      <!-- 
	Tycho Maven Plugin
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
      </plugin>	
      <!--
	Source and target to Java version 1.6, otherwise "method must implement @override" failures will occur.
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>maven-osgi-compiler-plugin</artifactId>
	<version>${tycho-version}</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <!--
	Use the provisioning system p2 from Eclipse.
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <resolver>p2</resolver>
        </configuration>
      </plugin>
      <!--
	Settings of the JUnit-Tests.
      -->
      <plugin>
        <groupId>${tycho-groupid}</groupId>
        <artifactId>maven-osgi-test-plugin</artifactId>
        <configuration>
          <useUIHarness>false</useUIHarness>
          <argLine>-Xmx500m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin> 
    </plugins>
  </build>
</project>
